--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Etch a Eketch</title>
 </head>
 <body>
+    <div id="options">
+        <button id="make-grid">Generar pizarra</button>
+        <button id="clear">Limpiar pizarra</button>
+        <button id="random">Colores Aleatorios <span id="on-off">(OFF)</span></button>
+    </div>
     <div class="container"></div>
 
     <script src="main.js"></script>
